#             |______\___|_| |_|\___/ \_____\___/|_|  \___|             #
#                                                                       #
#                                      Changelog                        #
#                                                                       #
#########################################################################

[55] --> DB/Quest: Fix: Badlands Reagent Run II (2203) (Thx Pitcrawler, joschiwald and Kirkhammett)
[54] --> DB/Quest: Fix: A Blade Fit For A Champion (Daily, 13741) (Thx malcrom and Aokromes)
[53] --> Implement/Fix: Portbacksystem for Dalaran Sewer Arena (Thx Torrad)
[52] --> Implement Top 5 Arenateams / Modify Top 5 Players (Thx Garyfisher & Torrad)
[51] --> DB/Quest: Fix: The Art of Being a Water Terror (13091) (Thx Kirkhammett)
[50] --> DB/Quest: Fix/Update: Foolish Endeavors (Thx by dr-j & Pitcrawler)
[49] --> DB/Quest: Fix: The Explorers' League Outpost (11448), We Can Rebuild It (11483) (Thx Pitcrawler)
[48] --> DB/Quest: Fix: Danger! Explosives! (11218) (Thx Pitcrawler)
[47] --> DB/Quest: Fix: Quest To Westguard Keep! (11291) (Thx Pitcrawler)
[46] --> Implement .arena commands - add new commands to the core to handle with arena teams. (Thx Bezo)
[45] --> Correct despawn of Lord Victor Nefarius in Blackwing Lair. (Thx Torrad)
[44] --> Correct use of bubble by Argent Confessor Paletress / Trial of the Champion. (Thx Torrad)
[43] --> DB/Exploit: Fix: Exp-Exploit with: NPC Azjol-Nerub / NPC Western Plaguelands.
[42] --> DB/Exploit: Fix: Duplicate gold with buy/sell this items.
[41] --> DB/Quest: Fix: To Catch a Thistlehead (Thx Kirkhammett & Pitcrawler)
[40] --> DB/Misc: Fix: Prevent chat/spell flood, Prevent summon spells from overwriting.
[39] --> Implement Arena "port-back" system, if player switches under the ground.
[38] --> DB/Spell: Fix: "Raise Death" of the Death knight Class (Thx Torrad).
[37] --> DB/Crash: Fix: Zul'Aman exploit with Amani'shi Warbringer (23580)